--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
-<% include partials/header %>
+<% include ./partials/header %>
+
 
 <h1>This is the INDEX page</h1>
 
@@ -11,4 +12,5 @@
     </div>
 <% }); %>
 
-<% include partials/footer %>
+
+<% include ./partials/footer %>
