--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,5 +2,15 @@
 <html>
     <head>
         <title>RESTful Blog App</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css">
+        <link rel="stylesheet" href="stylesheets/app.css">
     </head>
     <body>
+        
+        <div class="ui fixed inverted menu">
+            <div class="ui container">
+                <div class="header item"><i class="code icon"></i>Blog App</div>
+                <a href="/" class="item">Home</a>
+                <a href="/blogs/new" class="item">New Blog</a>
+            </div>
+        </div>
