Added DESTROY route also using method override, and added in the delete and edit buttons

--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,9 +9,13 @@
                 <span><%= blog.created.toDateString() %></span>
             </div>
             <div class="description">
-                <!-- The '-' will display whatever is shown in the body -->
+                <!-- The '-' will display whatever HTML is shown in the body -->
                 <p><%- blog.body %></p>
             </div>
+            <a href="/blogs/<%= blog._id %>/edit" class="ui inverted green button">Edit</a>
+            <form action="/blogs/<%= blog._id %>?_method=DELETE" method="POST" id="deleteBtn">
+                <button class="ui inverted red button">Delete</button>
+            </form>
         </div>
     </div>
 </div>
