--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,18 +1,34 @@
 <% include ./partials/header %>
 
-
-<h1>This is the INDEX page</h1>
-
-<% blogs.forEach(function(blog){ %>
-    <div>
-        <h2><%= blog.title %></h2>
-        <img src="<%= blog.image %>">
-        <br>
-        <span><%= blog.created.toDateString() %></span>
-        <p><%= blog.body.substring(0,100) %>...</p>
-        <a href="/blogs/<%= blog._id %>" class="ui inverted small blue button">Read more!</a>
+<div class="ui main text container">
+    <div class="ui huge header"><h1>RESTful Blog App</h1></div>
+    <div class="ui top attached segment">
+        <div class="ui divided items">
+            <% blogs.forEach(function(blog){ %>
+                <div class="item">
+                    <div class="image">
+                        <img src="<%= blog.image %>">
+                    </div>
+                    <div class="content">
+                        <a class="header" href="/blogs/<%= blog._id %>"><%= blog.title %></a>
+                        <div class="meta">
+                            <span><%= blog.created.toDateString() %></span>
+                        </div>
+                        <div class="description">
+                            <p><%- blog.body.substring(0,100) %>...</p>
+                        </div>
+                        <div class="extra">
+                            <a href="/blogs/<%= blog._id %>" class="ui inverted small blue button">
+                                Read more<i class="right chevron icon small"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            <% }); %>
+        </div>
     </div>
-<% }); %>
-
+    
+    
+</div>
 
 <% include ./partials/footer %>
