--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
         
         <div class="ui fixed inverted menu">
             <div class="ui container">
-                <div class="header item"><i class="code icon"></i>Blog App</div>
+                <div class="header item"><i class="code icon"></i>REST Blog</div>
                 <a href="/" class="item">Home</a>
                 <a href="/blogs/new" class="item">New Blog</a>
             </div>
